# physical_ai_av

./: .gitignore  .pre-commit-config.yaml  README.md  explore_clip_index.ipynb  one_sample_usage_example.py  pyproject.toml  usage_example.py
.github/workflows/: pypi-publish.yml
notebooks/: data_visualization.ipynb
src/physical_ai_av/: __init__.py  calibration.py  dataset.py  egomotion.py  local_dataset.py  video.py
src/physical_ai_av/utils/: camera_models.py  hf_interface.py  interpolation.py  tf.py  visualization.py
