[project]
name = "physical_ai_av"
version = "0.1.1"
description = "Developer kit for working with the NVIDIA Physical AI Autonomous Vehicles Dataset"
readme = "README.md"
authors = [
    { name = "NVIDIA", email = "eschmerling@nvidia.com" }
]
requires-python = ">=3.11"
dependencies = [
    "av>=14.4.0",
    "huggingface-hub>=0.36.0",
    "numpy",
    "pandas",
    "pyarrow",
    "scipy",
    "tqdm",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
demo = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "mediapy>=1.2.0",
    "opencv-python-headless>=4.12.0.88",
]
dev = [
    "pytest>=9.0.1",
    "pre-commit>=4.4.0"
]

[tool.ruff]
line-length = 100

[tool.uv]
default-groups = "all"
